--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "build": "vuepress build ."
   },
   "dependencies": {
-    "vuepress": "2.0.0-beta.66",
-    "vuepress-theme-reco": "2.0.0-beta.67"
+    "vuepress": "2.0.0-rc.9",
+    "vuepress-theme-reco": "2.0.0-rc.9",
+    "@vuepress/bundler-vite": "2.0.0-rc.9"
   },
   "devDependencies": {
-    "@vuepress/plugin-google-analytics": "2.0.0-beta.64",
-    "country-flag-emoji-polyfill": "^0.1.4",
-    "markdown-it-katex": "^2.0.3",
-    "vuepress-plugin-seo2": "2.0.0-beta.233",
-    "vuepress-plugin-sitemap2": "2.0.0-beta.233"
+    "country-flag-emoji-polyfill": "^0.1.4"
   }
 }
